# spellbook_ros

./: .gitmodules  .rosinstall  CMakeLists.txt  package.xml
include/spellbook/: spellbook.h
include/spellbook/costmap_extruder/: CostmapExtruder.h
include/spellbook/dubins/: dubins.h
include/spellbook/geometry/rotations/: axis_angle.h  euler_angles.h  quaternion.h  rotmat.h
include/spellbook/geometry/rotations/detail/: axis_angle.h  euler_angles.h  quaternion.h  rotmat.h
include/spellbook/geometry/vector/: vec2.h  vec3.h  vec4.h
include/spellbook/geometry/vector/detail/: vec2.h  vec3.h  vec4.h
include/spellbook/geometry_msgs/: geometry_msgs.h
include/spellbook/geometry_msgs/detail/: geometry_msgs.h
include/spellbook/graph/: simple_adjacency_list.h
include/spellbook/graph/detail/: simple_adjacency_list.h
include/spellbook/grid/: grid.h
include/spellbook/grid/detail/: grid.h
include/spellbook/heap/: heap.h
include/spellbook/heap/detail/: heap.h
include/spellbook/log/: logging.h
include/spellbook/mapgen/: DFSMazeGenerator.h  MapGenerator.h  RandomMapGenerator.h
include/spellbook/math/: constants.h  math.h
include/spellbook/matrix/: matrix.h
include/spellbook/matrix/detail/: matrix.h
include/spellbook/memory/: StackAllocator.h  mempool.h
include/spellbook/memory/detail/: StackAllocator.h
include/spellbook/moveit_msgs/: moveit_msgs.h
include/spellbook/moveit_msgs/detail/: moveit_msgs.h
include/spellbook/msg_utils/: msg_utils.h
include/spellbook/poses/: pose2.h
include/spellbook/poses/detail/: pose2.h
include/spellbook/random/: gaussian.h
include/spellbook/raster/: raster.h
include/spellbook/raster/detail/: raster.h
include/spellbook/std_msgs/: std_msgs.h
include/spellbook/std_msgs/detail/: std_msgs.h
include/spellbook/stringifier/: stringifier.h
include/spellbook/term/: term.h
include/spellbook/term/detail/: term.h
include/spellbook/utils/: utils.h
src/: CMakeLists.txt
src/costmap_extruder/: CMakeLists.txt  CostmapExtruder.cpp  CostmapExtruder.h  costmap_extruder.cpp
src/dubins/: dubins.cpp
src/kinect_tilt_control/: CMakeLists.txt
src/log/: logging.cpp
src/mapgen/: DFSMazeGenerator.cpp  RandomMapGenerator.cpp
src/memory/: StackAllocator.cpp  mempool.cpp
src/msg_utils/: CMakeLists.txt  msg_utils.cpp
src/rosbag_utils/: CMakeLists.txt  rosbag_freeze.cpp
test/: CMakeLists.txt  grid_test.cpp  main.cpp  matrix_test.cpp  rotations_test.cpp  stack_allocator_unit_tests.cpp
