<?xml version="1.0"?>
<package>
    <name>spellbook_ros</name>
    <version>0.0.0</version>
    <description>Aurone's Spellbook - ROS Components</description>

    <maintainer email="andrew.dornbush@gmail.com">aurone</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>boost</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>octomap</build_depend>
    <build_depend>octomap_msgs</build_depend>
    <build_depend>octomap_ros</build_depend>
    <build_depend>openni-dev</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>smpl</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>pcl_conversions</build_depend>

    <run_depend>boost</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>octomap</run_depend>
    <run_depend>octomap_msgs</run_depend>
    <run_depend>octomap_ros</run_depend>
    <run_depend>openni-dev</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>smpl</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>pcl_conversions</run_depend>
</package>
